// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with props 1`] = `
.c3 {
  display: block;
  color: #FFFFFF;
  font-size: 16px;
  font-weight: 200;
  width: 30px;
  margin: 0;
  margin-top: 20px;
  margin-bottom: auto;
  margin-right: 20px;
  padding: 0.4em;
  padding-top: 0.3em;
  padding-bottom: 0.3em;
  border: 2px solid;
  border-radius: 3px;
  border-color: #38A9DB;
  background-color: #38A9DB;
}

.c3:hover {
  cursor: pointer;
  color: #FFFFFF;
  background-color: #2670AE;
  border-color: #2670AE;
}

.c3::before {
  content: ' 









































.c0 {;
}

.c1 {
  height: 100%;
  width: auto;
  margin: 0;
  padding-left: 20px;
  color: #FFFFFF;
  background: 'none';
}

.c2 {
  color: #070707;
  font-size: 18px;
  font-weight: normal;
  margin: 0;
  padding: 0;
  vertical-align: top;
  color: #FFFFFF;
}

.c4 {
  color: #024A8F;
  font-size: 22px;
  font-weight: normal;
  margin: 0;
  padding: 0;
  color: #FFFFFF;
  weight: 300;
}

<div
  className="c0 c1"
>
  <div
    className=""
    direction="row"
  >
    <h4
      className="c2"
      color="#070707"
    >
       Team Overview 
    </h4>
    <button
      className="c3"
      onClick={undefined}
    />
  </div>
  <div
    className=""
    direction="row"
  >
    <div
      className=""
    >
      <h3
        className="c4"
        color="#024A8F"
      >
        0.909
      </h3>
      <p
        className=""
        color="#FFFFFF"
        size={undefined}
      >
        <i>
          Win / Loss
        </i>
      </p>
    </div>
    <div
      className=""
    >
      <h3
        className="c4"
        color="#024A8F"
      >
        -10
      </h3>
      <p
        className=""
        color="#FFFFFF"
        size={undefined}
      >
        <i>
          Games Remaining
        </i>
      </p>
    </div>
  </div>
</div>
`;

exports[`renders correctly with toggledSidebar 1`] = `
.c3 {
  display: block;
  color: #FFFFFF;
  font-size: 16px;
  font-weight: 200;
  width: 30px;
  margin: 0;
  margin-top: 20px;
  margin-bottom: auto;
  margin-right: 20px;
  padding: 0.4em;
  padding-top: 0.3em;
  padding-bottom: 0.3em;
  border: 2px solid;
  border-radius: 3px;
  border-color: #38A9DB;
  background-color: #38A9DB;
}

.c3:hover {
  cursor: pointer;
  color: #FFFFFF;
  background-color: #2670AE;
  border-color: #2670AE;
}

.c3::before {
  content: ' 









































.c0 {;
}

.c1 {
  height: 100%;
  width: auto;
  margin: 0;
  padding-left: 20px;
  color: #FFFFFF;
  background: 'none';
}

.c2 {
  color: #070707;
  font-size: 18px;
  font-weight: normal;
  margin: 0;
  padding: 0;
  vertical-align: top;
  color: #FFFFFF;
}

.c4 {
  color: #024A8F;
  font-size: 22px;
  font-weight: normal;
  margin: 0;
  padding: 0;
  color: #FFFFFF;
  weight: 300;
}

<div
  className="c0 c1"
>
  <div
    className=""
    direction="row"
  >
    <h4
      className="c2"
      color="#070707"
    >
       Team Overview 
    </h4>
    <button
      className="c3"
      onClick=""
    />
  </div>
  <div
    className=""
    direction="row"
  >
    <div
      className=""
    >
      <h3
        className="c4"
        color="#024A8F"
      >
        0.909
      </h3>
      <p
        className=""
        color="#FFFFFF"
        size={undefined}
      >
        <i>
          Win / Loss
        </i>
      </p>
    </div>
    <div
      className=""
    >
      <h3
        className="c4"
        color="#024A8F"
      >
        -10
      </h3>
      <p
        className=""
        color="#FFFFFF"
        size={undefined}
      >
        <i>
          Games Remaining
        </i>
      </p>
    </div>
  </div>
</div>
`;
